fix some spacing

--- a/css/kviss.css
+++ b/css/kviss.css
@@ -27,8 +27,8 @@ header {
     position: relative;
     border-radius: 0.25em;
     padding:0.25em;
-    padding-top: 1em;
-    margin-bottom: 4em;
+    padding-top: 3em;
+    margin-bottom: 20em;
     top: 2em;
     border: none;
 }
@@ -341,6 +341,7 @@ a[disabled] {opacity: 0.2; pointer-events: none; cursor: default;}
     text-align: center;
     border: 10px dotted magenta;
     border-radius: 1em;
+    margin-bottom: 10em;
 }
 
 #kviss-scoreboard h2 {
